// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly for large screens 1`] = `
<header
  className="Header"
>
  <div
    className="Header__left-element-group"
  >
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        id="Header__menu-button"
        onClick={[Function]}
      />
    </div>
    <div
      className="Header__element Header__logo"
    >
      logo
    </div>
    <div
      className="Header__element"
    >
      <Connect(SearchBar) />
    </div>
  </div>
  <div
    className="Header__right-element-group"
  >
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        id="Header__settings-button"
        onClick={[Function]}
      />
    </div>
  </div>
</header>
`;

exports[`<Header /> renders correctly for small screens 1`] = `
<header
  className="Header"
>
  <div
    className="Header__left-element-group"
  >
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        id="Header__menu-button"
        onClick={[Function]}
      />
    </div>
    <div
      className="Header__element Header__logo"
    >
      logo
    </div>
  </div>
  <div
    className="Header__right-element-group"
  >
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        id="Header__search-button"
        onClick={[Function]}
      />
    </div>
    <div
      className="Header__element"
    >
      <HeaderButton
        content={<Unknown />}
        id="Header__settings-button"
        onClick={[Function]}
      />
    </div>
  </div>
</header>
`;
